# finitedepth-gui

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
dipcoatimage/finitedepth_gui/: __init__.py
doc/source/: conf.py  index.rst
